--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/style-index.css">
+    <link rel="stylesheet" href="styles/index.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,11 +14,15 @@
 </head>
 
 <body>
-    <h1 style="text-align: center;">Hültár</h1>
+    <h1 style="text-align: center;">hültár</h1>
     
     <div class="bevasarlo-lista-ikon">
         <a onclick="window.location.href = 'lista'"><i class="fas fa-clipboard-list"></i></a>
     </div>
     <p style="text-align: center; opacity: 0.3;">Készítette: Rostás András Péter</p>
+
+    <div class="huto-nyitas-fent"></div>
+
+    <div onclick="window.location.href = 'kinyitva'" class="huto-nyitas"></div>
 </body>
 </html>
