--- a/views/kinyitva.ejs
+++ b/views/kinyitva.ejs
@@ -6,34 +6,38 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/style-kinyitva.css">
+    <link rel="stylesheet" href="styles/kinyitva.css">
+    <link rel="stylesheet" href="styles/kinyitva-tabla.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hültár</title>
+    <title>Hültár - Kinyitva</title>
     <script defer src="uj.js"></script>
     <script defer src="uj-letrehozas.js"></script>
     <script defer src="uj-alaphelyzetbe.js"></script>
     <script defer src="uj-mennyiseg.js"></script>
     <script defer src="script.js"></script>
-    <script defer src="ikonok.js"></script>
+    <!-- <script defer src="ikonok.js"></script> -->
 </head>
 
 <body>
     <div class="hultar-cimke">
         <h3>hűtő leltár</h3>
-        <!-- <svg xmlns="http://www.w3.org/2000/svg" class="hultar-ikon" viewBox="0 0 512 512" width="55" height="55"><path d="M359.483,5H152.517A45.642,45.642,0,0,0,107,51V435.314c0,18.487,10,34.451,26,41.755V501a6.219,6.219,0,0,0,6.25,6h38.234c3.314,0,5.516-2.687,5.516-6V481H329v20c0,3.313,2.2,6,5.516,6H372.75a6.219,6.219,0,0,0,6.25-6V477.069c16-7.3,26-23.268,26-41.755V51A45.642,45.642,0,0,0,359.483,5ZM171,495H145V480.735a52.563,52.563,0,0,0,7.517.265H171Zm10-26H162v-2.8a23.667,23.667,0,0,1,19-23.148Zm34,0H193V443h22Zm35,0H227V443h23Zm35,0H262V443h23Zm34,0H297V443h22Zm12,0V442.867c11,1.915,20,11.648,20,23.338V469Zm36,26H341V481h18.483a52.563,52.563,0,0,0,7.517-.265Zm26-59.686a33.352,33.352,0,0,1-30,33.507v-2.616c0-19.677-16.076-35.2-35.753-35.2h-141.5C166.065,431,150,446.528,150,466.205V468.9a33.346,33.346,0,0,1-31-33.585V156h21v31.033a22,22,0,0,0,44,0V156H393ZM152,187.033V113a10,10,0,0,1,20,0v74.035a10,10,0,0,1-20,0ZM393,144H184V113a22,22,0,0,0-44,0v31H119V51a33.629,33.629,0,0,1,33.517-34H359.483A33.629,33.629,0,0,1,393,51Z"/><path d="M368,92H304a10,10,0,0,0-10,10v18a10,10,0,0,0,10,10h64a10,10,0,0,0,10-10V102A10,10,0,0,0,368,92Zm-3,26H306V104h59Z"/><path d="M136,238.106a6,6,0,0,0-6,6v75.807a6,6,0,0,0,12,0V244.106A6,6,0,0,0,136,238.106Z"/><path d="M136,212.892a6,6,0,0,0-6,6v4.834a6,6,0,0,0,12,0v-4.834A6,6,0,0,0,136,212.892Z"/></svg>-->
     </div>
    
     <div class="tartalom">
         <table>
-            <tr>
-                <td>Név</td>
-                <td>Mennyiség</td>
-                <td>Lejárat</td>
-                <td class="interakciok-td">Interakciók</td>
-            </tr>
-            <tr></tr>
+            <thead>
+                <tr>
+                    <td>Név</td>
+                    <td>Mennyiség</td>
+                    <td>Lejárat</td>
+                    <td class="interakciok-td">Interakciók</td>
+                </tr>
+            </thead>
+            <tbody>
+
+            </tbody>
         </table>
     </div>
 
@@ -51,7 +55,7 @@
         
         <div class="modal-body" id="uj-1">
             <p style="font-size: 18px;">Kérlek add meg a nevét a hozzáadni kívánt élelmiszernek</p>
-            <input id="uj-nev-beiras" placeholder="Pl.: Tej" type="text">
+            <input maxlength="10" id="uj-nev-beiras" placeholder="Pl.: Tej" type="text">
         </div>
 
         <div class="modal-body" id="uj-2">
@@ -63,10 +67,10 @@
                 <div class="mertekegyseg-valaszto">
                     <p>Mértékegység:</p>
                     <select id="uj-mertekegyseg">
-                        <option value="db">Darab</option>
+                        <option value="darab">Darab</option>
                         <option value="doboz">Doboz</option>
-                        <option value="l">Liter</option>
-                        <option value="kg">Kiló</option>
+                        <option value="liter">Liter</option>
+                        <option value="kiló">Kiló</option>
                     </select>
                 </div>
             </div>
