--- a/views/lista.ejs
+++ b/views/lista.ejs
@@ -6,8 +6,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/style-lista.css">
-    <link rel="stylesheet" href="styles/style-lista-tabla.css">
+    <link rel="stylesheet" href="styles/lista.css">
+    <link rel="stylesheet" href="styles/lista-tabla.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,31 +45,45 @@
 
     </div>
 
-    <div class="uj-hozzaadasa">
-
-
-        <div class="lista-cimke">
-            <h3>Új felvétele</h3>
-        </div>
-        <label for="szoveg">Termék: <input name="szoveg" id="uj-szoveg" type="text"></label><br>
-        <label for="mennyiseg">Mennyiség: 
-            <button name="mennyiseg" class="interakcio-gomb" onclick="ujMennyisegAllitas('minusz')" id="uj-mennyiseg-minusz">-</button>
-            <input disabled id="uj-mennyiseg-beiras" value="1" max="100" min="1" type="number">
-            <button class="interakcio-gomb" onclick="ujMennyisegAllitas('plussz')" id="uj-mennyiseg-plussz">+</button>
-        </label>
-        <label for="mertekegyseg">
-            <select name="mertekegyseg" id="uj-mertekegyseg">
-                <option value="darab">Darab</option>
-                <option value="doboz">Doboz</option>
-                <option value="liter">Liter</option>
-                <option value="kiló">Kiló</option>
-            </select>
-        </label>
-
-        <br><button id="uj-hozzaadas-gomb">Hozzáadás</button>
-        <br><button style="cursor: default; opacity: 0;">Hozzáadás</button>
-
+    <div style="width: 450px; margin: 0 auto;">
+        <hr>
     </div>
+
+    <button type="button" onclick="menuAlaphelyzet()" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Új hozzáadása</button>
+
+    <div class="modal fade" id="myModal">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">Új hozzáadása</h4>
+              <button type="button" onclick="menuAlaphelyzet()" class="close" data-dismiss="modal">&times;</button>
+            </div>
+        
+            <div class="modal-body">
+
+                <label for="szoveg">Termék: <input name="szoveg" id="uj-szoveg" type="text"></label><br>
+                <label for="mennyiseg">Mennyiség: 
+                    <button name="mennyiseg" class="interakcio-gomb" onclick="ujMennyisegAllitas('minusz')" id="uj-mennyiseg-minusz">-</button>
+                    <input disabled id="uj-mennyiseg-beiras" value="1" max="100" min="1" type="number">
+                    <button class="interakcio-gomb" onclick="ujMennyisegAllitas('plussz')" id="uj-mennyiseg-plussz">+</button>
+                </label>
+                <label for="mertekegyseg">
+                    <select name="mertekegyseg" id="uj-mertekegyseg">
+                        <option value="darab">Darab</option>
+                        <option value="doboz">Doboz</option>
+                        <option value="liter">Liter</option>
+                        <option value="kiló">Kiló</option>
+                    </select>
+                </label>
+
+            </div>
+            <div class="modal-footer" id="uj-1-footer">
+                <button id="uj-hozzaadas-gomb" class="btn hozzadas-gomb">Hozzáadás</button>
+            </div>
+            
+          </div>
+        </div>
+      </div>
 </div>
 <i id="vissza-gomb" style="text-align: center; cursor: pointer;" onclick="window.location.href ='/'" class="fas fa-undo-alt"></i>
 </html>
