--- a/public/styles/lista.css
+++ b/public/styles/lista.css
@@ -85,6 +85,12 @@ button {
 button:focus {
     outline: none;
 }
+
+button:hover {
+    cursor: pointer;
+    border: none;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
