--- a/views/kinyitva.ejs
+++ b/views/kinyitva.ejs
@@ -20,6 +20,7 @@
     <script defer src="scripts/script.js"></script>
     <script defer src="scripts/f5.js"></script>
     <script defer src="scripts/hiba.js"></script>
+    <script defer src="scripts/interakciok.js"></script>
 </head>
 
 <body>
@@ -96,6 +97,7 @@
 
         <div class="modal-body" id="uj-3">
             <p style="font-size: 18px;">Kérlek add meg a(z) <b><span id="uj-2-mennyiseg"></span></b> lejárati dátumát</p>
+
             <input id="uj-lejaratidatum-beiras" type="date" name="lejarati">
         </div>
     
@@ -123,5 +125,3 @@
 <div class="asdasd"></div>
 </body>
 </html>
-
-<!-- 3:52 -->
