--- a/src/public/styles/lista.css
+++ b/src/public/styles/lista.css
@@ -22,8 +22,6 @@ body {
     text-align: center;
 }
 
-
-
 tr:nth-child(1n) {
     background-color: rgb(219, 218, 218);
 }
@@ -124,7 +122,7 @@ input::-webkit-inner-spin-button {
 .kocsi {
     position: fixed;
     left: 21%;
-    opacity: 0.02;
+    opacity: 0.04;
     z-index: -1;
 }
 #vissza-gomb {
@@ -166,4 +164,55 @@ input::-webkit-inner-spin-button {
     margin-top: -220px;
     margin-left: -150px;
     z-index: -300;
+}
+.close {
+    color: rgb(245, 60, 60);
+    opacity: 1;
+    border: none;
+}
+.close:hover {
+    color: rgb(187, 14, 14);
+}
+.close:focus {
+    border: none;
+    outline: none;
+}
+
+.plusszegy-gomb, #uj-mennyiseg-plussz {
+    background-color: #4bb802;
+}
+
+.plusszegy-gomb:hover, #uj-mennyiseg-plussz:hover {
+    transition: 0.3;
+    background-color: #0f800f;
+}
+.minuszegy-gomb, #uj-mennyiseg-minusz {
+    background-color: rgb(243, 56, 69);
+}
+
+.minuszegy-gomb:hover, #uj-mennyiseg-minusz:hover {
+    transition: 0.3;
+    background-color: rgb(187, 14, 14);
+}
+
+
+.interakciok-td {
+    width: 115px;
+}
+.interakciok button, .interakcio i {
+    margin: 5px;
+}
+button {
+    color: whitesmoke;
+}
+
+.torles-ikon {
+    transition: 0.2s;
+    color: rgb(245, 60, 60);
+    cursor: pointer;
+}
+
+.torles-ikon:hover {
+    color: rgb(187, 14, 14);
+    transition: 0.3s;
 }
