--- a/src/public/views/kinyitva.ejs
+++ b/src/public/views/kinyitva.ejs
@@ -21,11 +21,14 @@
     <script defer src="scripts/f5.js"></script>
     <script defer src="scripts/hiba.js"></script>
     <script defer src="scripts/interakciok.js"></script>
+    <script defer src="scripts/hangok.js"></script>
 </head>
 
 <body>
 
+    <audio src="hangok/nyitas.mp3"></audio>
 
+    <div class="lista"><img draggable="false" src="kepek/lista.png" alt=""></div>
     <div class="hultar-cimke">
         <h3>hűtő leltár</h3>
     </div>
