--- a/src/public/views/kinyitva.ejs
+++ b/src/public/views/kinyitva.ejs
@@ -37,10 +37,7 @@
         <table>
             <thead>
                 <tr>
-                    <td>Név</td>
-                    <td>Mennyiség</td>
-                    <td>Lejárat</td>
-                    <td class="interakciok-td">Interakciók</td>
+                    <td colspan="4"><i style="font-size: 25px; margin: 5px;" class="fas fa-icicles"></i></td>
                 </tr>
             </thead>
             <tbody>
@@ -125,6 +122,10 @@
   </div>
 </div>
 </div>
-<div class="asdasd"></div>
+
+<script>
+    document.querySelector('table').style.backgroundColor = 'rgb(175 173 173)'
+</script>
+
 </body>
 </html>
