--- a/src/public/views/lista.ejs
+++ b/src/public/views/lista.ejs
@@ -25,7 +25,10 @@
 </head>
 
 <body>
-    <audio src="hangok/lista.mp3"></audio>
+    <audio id="belepo" src="hangok/lista.mp3"></audio>
+    <audio id="torles" src="hangok/torles.mp3"></audio>
+    <audio id="iras" src="hangok/iras.mp3"></audio>
+    <audio id="kihuzas" src="hangok/kihuzas.mp3"></audio>
 
     <div class="kocsi"><img draggable="false" src="kepek/kocsi.png" alt=""></div>
 
