--- a/src/public/views/lista.ejs
+++ b/src/public/views/lista.ejs
@@ -33,7 +33,7 @@
     <div class="kocsi"><img draggable="false" src="kepek/kocsi.png" alt=""></div>
 
     <div class="lista-cimke">
-        <h3>bevásárló lista <i class="fas fa-clipboard-list"></i></h3>
+        <h3>bevásárló lista</h3>
     </div>
 
 <div class="egesz">
