--- a/src/public/styles/kinyitva.css
+++ b/src/public/styles/kinyitva.css
@@ -9,7 +9,9 @@ body {
 }
 
 
-
+/*.targy-neve {
+    font-weight: bold;
+}*/
 
 .uj-mertekegyseg {
     cursor: pointer;
@@ -38,7 +40,7 @@ body {
 }
 
 .hultar-cimke {
-    margin-top: 25vh;
+    margin-top: 19vh;
     text-align: center;
     color: #8C8C8C;
     font-size: 25px;
